<resources>
    <string name="app_name">DORA2</string>
    <string name="maps_api_key">AIzaSyB4DhO_dav2cMtp4PrmXIGIt_rkJau8phk</string>
    <string name="btn_logout">Log out!</string>
    <string name="txt_login">Welcome to the DORA app!</string>
    <string name="txt_hint_email">E-mail</string>
    <string name="txt_hint_pss">Password</string>
    <string name="txt_hint_pss2">Confirm Password</string>
    <string name="btn_login">Log in!</string>
    <string name="txt_register">Do not have an account? \n Tap me!</string>
    <string name="btn_register">Register now!</string>
    <string name="txt_backLogin">Already have an account? \n Tap me!</string>
    <string name="parks">Parks</string>
    <string name="restaurants">Restaurants</string>
    <string name="museums">Museums</string>
    <string name="save_preferences">Save preferences</string>
    <string name="btn_modal">Open filter</string>
    <string name="act_name">Profile</string>
</resources>