<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_margin="20dp">
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_login"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/txtEmailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegister"
        android:hint="@string/txt_hint_email"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/txtPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailR"
        android:hint="@string/txt_hint_pss"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/txtRepeatPss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPasswordR"
        android:hint="@string/txt_hint_pss2"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRepeatPss"
        android:text="@string/btn_register"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_backLogin"
        android:layout_below="@+id/btnRegister"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>