<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_login"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHello"
        android:hint="@string/txt_hint_email"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:hint="@string/txt_hint_pss"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:text="@string/btn_login"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:layout_below="@+id/btnLogin"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>